[workspace]
resolver = "2"
members = ["paas-api", "paas-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["loongkirin"]
license = "MIT"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
